--- a/core/src/main/resources/hudson/model/Messages.properties
+++ b/core/src/main/resources/hudson/model/Messages.properties
@@ -135,7 +135,8 @@ Hudson.BadPortNumber=Bad port number {0}
 Hudson.Computer.Caption=Master
 Hudson.Computer.DisplayName=master
 Hudson.ControlCodeNotAllowed=No control code is allowed: {0}
-Hudson.DisplayName=Jenkins
+#Hudson.DisplayName=Jenkins
+Hudson.DisplayName=\u6240\u6709
 Hudson.JobAlreadyExists=A job already exists with the name \u2018{0}\u2019
 Hudson.NoJavaInPath=java is not in your PATH. Maybe you need to <a href="{0}/configure">configure JDKs</a>?
 Hudson.NoName=No name is specified
@@ -147,7 +148,8 @@ Hudson.Permissions.Title=Overall
 Hudson.USER_CONTENT_README=Files in this directory will be served under your http://yourjenkins/userContent/
 Hudson.UnsafeChar=\u2018{0}\u2019 is an unsafe character
 Hudson.ViewAlreadyExists=A view already exists with the name "{0}"
-Hudson.ViewName=All
+#Hudson.ViewName=All
+Hudson.ViewName=\u89c6\u56fe
 Hudson.NotANumber=Not a number
 Hudson.NotAPositiveNumber=Not a positive number
 Hudson.NotANonNegativeNumber=Number may not be negative
