--- a/core/src/main/resources/hudson/model/Messages.properties
+++ b/core/src/main/resources/hudson/model/Messages.properties
@@ -30,7 +30,8 @@ AbstractBuild.KeptBecause=This build is kept because of {0}.
 
 AbstractItem.NoSuchJobExists=No such job \u2018{0}\u2019 exists. Perhaps you meant \u2018{1}\u2019?
 AbstractItem.NoSuchJobExistsWithoutSuggestion=No such job \u2018{0}\u2019 exists.
-AbstractItem.Pronoun=Item
+#AbstractItem.Pronoun=Item
+AbstractItem.Pronoun=\u4efb\u52a1
 AbstractItem.TaskNoun=Build
 AbstractItem.BeingDeleted={0} is currently being deleted
 AbstractItem.FailureToStopBuilds=Failed to interrupt and stop {0,choice,1#{0,number,integer} build|1<{0,number,integer} \
